# price_watcher

./: README.md  setup.cfg
.github/workflows/: tests.yml
src/price_watcher.egg-info/: PKG-INFO  SOURCES.txt
