[metadata]
name = price_watcher
version = 0.0.1
author = Martin Nørskov Jensen
author_email = martin_n@me.com
description = A library for keeping track of webshops prices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/norskovsen/price_watcher
project_urls =
    Bug Tracker = https://github.com/norskovsen/price_watcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
